--- a/about.html
+++ b/about.html
@@ -262,7 +262,7 @@
                         <div class="col-md-12 col-lg-8">
                             <div class="title-single-box">
                                 <h1 class="title-single">
-                                    We help you  find your next home!
+                                    We help you find your next home!
                                 </h1>
                             </div>
                         </div>
@@ -376,7 +376,7 @@
                             <div class="card-box-d">
                                 <div class="card-img-d">
                                     <img
-                                        src="assets/img/agent-7.jpg"
+                                        src="assets/img/gokul.jpg"
                                         alt=""
                                         class="img-d img-fluid"
                                     />
@@ -416,7 +416,7 @@
                             <div class="card-box-d">
                                 <div class="card-img-d">
                                     <img
-                                        src="assets/img/agent-6.jpg"
+                                        src="assets/img/Ram.JPG"
                                         alt=""
                                         class="img-d img-fluid"
                                     />
@@ -456,7 +456,7 @@
                             <div class="card-box-d">
                                 <div class="card-img-d">
                                     <img
-                                        src="assets/img/agent-5.jpg"
+                                        src="assets/img/harish .jpg"
                                         alt=""
                                         class="img-d img-fluid"
                                     />
@@ -497,7 +497,7 @@
                             <div class="card-box-d">
                                 <div class="card-img-d">
                                     <img
-                                        src="assets/img/agent-5.jpg"
+                                        src="assets/img/sak.jpg"
                                         alt=""
                                         class="img-d img-fluid"
                                     />
